# dependencies

./: .coveragerc  .cruft.json  .eslintrc.yml  .flake8  .gitignore  .importlinter  .jscpd.json  .pre-commit-config.yaml  .python-version  .pyup.yml  .readthedocs.txt  .readthedocs.yml  .travis.yml  .vale.ini  .yamllint  404.html  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  blacken-docs.install.sh  blacken-docs.patch  codecov.yml  dangerfile.ts  dependencies.py  index.html  misspell-fixer.install.sh  mkdocs.yml  mypy.ini  package.json  pyproject.toml  pytest.ini  release.config.js  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini  (+1 more)
.github/: FUNDING.yml
attrs/: index.html
changelog/: index.html
classes/: index.html
dependencies/: __init__.py  _injector.py  _operation.py  _package.py  _proxies.py  _spec.py  _this.py  exceptions.py  injector.py  proxies.py
descriptors/: index.html
design/: index.html
direct_resolve/: index.html
docs/: Makefile  attrs.md  changelog.md  changelog.rst  classes.md  conf.py  config.yml  descriptors.md  design.md  development.md  direct_resolve.md  enum.md  faq.md  faq.rst  implementation.md  implementation.rst  index.md  index.rst  installation.md  installation.rst  mixins.md  nested.md  operation.md  overview.md  overview.rst  package.md  reference.md  scalar.md  settings.md  setup_teardown.md  shield.md  sticky.md  this.md  tutorial.rst  type_hints.md  usage.md  usage.rst  value.md  why.md  why.rst  (+1 more)
enum/: index.html
examples/: README.rst  notification.py  setup.py  wire_callback.py  wire_class.py
faq/: index.html
implementation/: index.html
installation/: index.html
javascripts/: extra.js
mixins/: index.html
nested/: index.html
operation/: index.html
overview/: index.html
package/: index.html
requirements/: ci.txt  qa.txt
scalar/: index.html
scripts/: check  install  lint  release  review  serve  test
search/: search_index.json
settings/: index.html
setup_teardown/: index.html
shield/: index.html
src/: _.py
sticky/: index.html
testing/: application.py  attributes.py  coder.py  collector.py  configuration.py  consul.py  define.py  expect.py  has.py  let.py  mddoctest.py  rnd.py  signature.py
tests/: conftest.py  test_checks_circles.py  test_checks_descriptor.py  test_extend.py  (+41 more)
tests/helpers/: configuration.py  django_settings_module.py  doctested_module.py  examples.py  helpers.py  mddoctest.py  pyproject.toml  setup.py  urlconf_create_view.py  urlconf_dispatch_request.py  urlconf_inject_user.py  urlconf_pass_kwargs_to_the_service.py
tests/helpers/app/: calc.py  purchase.py  repositories.py  robot.py  services.py  shop.py  transactions.py  types.py
tests/helpers/django_project/: apps.py  commands.py  forms.py  responses.py  settings.py  urls.py  views.py
tests/helpers/django_project/api/: auth.py  commands.py  exceptions.py  filtersets.py  metadata.py  negotiation.py  serializers.py  throttle.py  urls.py  version.py  views.py
tests/helpers/django_project/templates/: question.html
tests/helpers/examples/: __init__.py  descriptor.py  faq.py  operation.py  overview.py  self_pointer.py  stubs.py  submodule.py  utils.py
tests/helpers/examples/cart/: commands.py  filtersets.py  forms.py  models.py  serializers.py  views.py
tests/helpers/examples/circles/: complex_operation.py  long_operation.py  long_value.py  simple_class.py  simple_operation.py
tests/helpers/examples/order/: commands.py  tasks.py
tests/helpers/examples/users/: utils.py
tests/helpers/flask_project/: app.py  commands.py  views.py
tests/helpers/pkg/: injected.py  self_pointer.py  submodule.py
tests/helpers/pkg/circles/: complex_class.py  complex_operation.py  complex_value.py  long_class.py  long_operation.py  long_value.py  simple_class.py  simple_operation.py  simple_value.py
tests/helpers/polls/: apps.py  commands.py  forms.py  urls.py  views.py
tests/helpers/polls/api/: auth.py  commands.py  exceptions.py  filtersets.py  metadata.py  negotiation.py  serializers.py  throttle.py  urls.py  version.py  views.py
tests/helpers/polls/migrations/: 0001_initial.py
(+193 files in other folders)
