[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Artem Malyshev <proofit404@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Constructor injection designed with OOP in mind."
documentation = "https://proofit404.github.io/dependencies"
homepage = "https://pypi.org/project/dependencies"
license = "BSD-2-Clause"
name = "dependencies"
packages = [
    { include = "_dependencies", from = "src" },
    { include = "dependencies", from = "src" },
]
readme = "docs/index.md"
repository = "https://github.com/proofit404/dependencies"
version = "7.1.5"

[tool.poetry.dependencies]
python = "~3.6 || ~3.7 || ~3.8 || ~3.9"

[tool.poetry.urls]
Changelog = "https://proofit404.github.io/dependencies/changelog"
Issues = "https://github.com/proofit404/dependencies/issues"
Twitter = "https://twitter.com/proofit404"
