[tool.poetry]
name = "helpers"
version = "0"
description = ""
authors = []
packages = [
    { include = "django_project" },
    { include = "examples" },
    { include = "flask_project" },
    { include = "helpers.py" },
    { include = "mddoctest.py"},
    { include = "pkg" },
]

[tool.poetry.scripts]
mddoctest = "mddoctest:main"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
